--- a/public/index.html
+++ b/public/index.html
@@ -34,19 +34,78 @@
           news: "Noticias Oficiales",
           social: "Red Social",
           profile: "Perfil",
+          oneXten: "1x10",
           birthdays: "Cumpleaños",
           suggestions: "Personas que quizás conozcas",
           contacts: "Contactos",
           language: "Idioma",
           error: "Ocurrió un error. Por favor, recarga la página."
         },
-        wayuunaiki: { home: "Jepirra", news: "Waneepia", social: "Waya", profile: "Aipirua", error: "Alainnapa. Jale jujuya." },
-        pemon: { home: "Panton", news: "Yekuana", social: "Kumana", profile: "Enek", error: "Pawana. Wökö puyö." },
-        en: { home: "Home", news: "Official News", social: "Social Network", profile: "Profile", error: "An error occurred. Please reload." },
-        ru: { home: "Главная", news: "Официальные новости", social: "Социальная сеть", profile: "Профиль", error: "Ошибка. Перезагрузите." },
-        ar: { home: "الرئيسية", news: "الأخبار الرسمية", social: "الشبكة الاجتماعية", profile: "الملف الشخصي", error: "حدث خطأ. أعد التحميل." },
-        zh: { home: "首页", news: "官方新闻", social: "社交网络", profile: "个人资料", error: "发生错误。请刷新。" }
+        wayuunaiki: { home: "Jepirra", news: "Waneepia", social: "Waya", profile: "Aipirua", oneXten: "1x10", error: "Alainnapa. Jale jujuya." },
+        pemon: { home: "Panton", news: "Yekuana", social: "Kumana", profile: "Enek", oneXten: "1x10", error: "Pawana. Wökö puyö." },
+        en: { home: "Home", news: "Official News", social: "Social Network", profile: "Profile", oneXten: "1x10", error: "An error occurred. Please reload." },
+        ru: { home: "Главная", news: "Официальные новости", social: "Социальная сеть", profile: "Профиль", oneXten: "1x10", error: "Ошибка. Перезагрузите." },
+        ar: { home: "الرئيسية", news: "الأخبار الرسمية", social: "الشبكة الاجتماعية", profile: "الملف الشخصي", oneXten: "1x10", error: "حدث خطأ. أعد التحميل." },
+        zh: { home: "首页", news: "官方新闻", social: "社交网络", profile: "个人资料", oneXten: "1x10", error: "发生错误。请刷新。" }
       };
+
+      // 1x10 Component
+      function OneXTen({ t }) {
+        const [members, setMembers] = React.useState([]);
+        const [error, setError] = React.useState(null);
+
+        React.useEffect(() => {
+          axios.get("/api/1x10")
+            .then((res) => setMembers(Array.isArray(res.data) ? res.data : []))
+            .catch((err) => {
+              console.error("Error fetching 1x10 members:", err.message);
+              setError("No se pudieron cargar los miembros.");
+            });
+        }, []);
+
+        if (error) {
+          return (
+            <div className="p-4 text-[#2a2a2a]">
+              <h2>Error</h2>
+              <p>{error}</p>
+            </div>
+          );
+        }
+
+        return (
+          <div className="space-y-4">
+            <h2 className="text-[#2a2a2a] font-bold text-xl">Mi Red 1x10</h2>
+            {members.length > 0 ? (
+              members.map((member) => (
+                <div
+                  key={member.id || `member-${Math.random()}`}
+                  className="bg-[#ffffff] p-4 rounded shadow-[#e2e2e2] flex items-center"
+                >
+                  <img
+                    src={member.photo || "https://via.placeholder.com/50"}
+                    alt="Member"
+                    className="w-12 h-12 rounded-full"
+                    onError={(e) => (e.target.src = "https://via.placeholder.com/50")}
+                  />
+                  <div className="ml-4">
+                    <p className="text-[#2a2a2a] font-bold">{member.name || "Sin nombre"}</p>
+                    <p className="text-[#bcbcbc] text-sm">{member.cedula || "Sin cédula"}</p>
+                    <p className="text-[#2a2a2a]">{member.status || "Desconocido"}</p>
+                  </div>
+                  <button className="ml-auto bg-[#e11a1d] text-white p-2 rounded">
+                    Contactar
+                  </button>
+                </div>
+              ))
+            ) : (
+              <p className="text-[#2a2a2a]">Cargando miembros...</p>
+            )}
+            <button className="bg-[#e11a1d] text-white p-2 rounded">
+              Invitar Miembro
+            </button>
+          </div>
+        );
+      }
 
       // Main App Component
       function App() {
@@ -56,6 +115,7 @@
         const [showMessagePopup, setShowMessagePopup] = React.useState(false);
         const [showBirthdayPopup, setShowBirthdayPopup] = React.useState(false);
         const [error, setError] = React.useState(null);
+        const [currentSection, set也将 setCurrentSection("home");
 
         // Fetch data
         React.useEffect(() => {
@@ -100,8 +160,8 @@
                   />
                 </div>
                 <div className="flex space-x-4">
-                  <button className="hover:bg-[#b4141e] p-2 rounded">{t.home}</button>
-                  <button className="hover:bg-[#b4141e] p-2 rounded">{t.profile}</button>
+                  <button className="hover:bg-[#b4141e] p-2 rounded" onClick={() => setCurrentSection("home")}>{t.home}</button>
+                  <button className="hover:bg-[#b4141e] p-2 rounded" onClick={() => setCurrentSection("profile")}>{t.profile}</button>
                   <select
                     value={language}
                     onChange={(e) => setLanguage(e.target.value)}
@@ -124,19 +184,23 @@
               {/* Left Sidebar */}
               <aside className="w-1/4 bg-[#f6f6f6] sticky top-16">
                 <ul className="space-y-2 p-4">
-                  <li className="flex items-center p-2 hover:bg-[#e9e9e9] rounded">
+                  <li className="flex items-center p-2 hover:bg-[#e9e9e9] rounded" onClick={() => setCurrentSection("home")}>
                     <span className="text-[#b41414] mr-2">🏠</span>
                     <span className="text-[#2a2a2a]">{t.home}</span>
                   </li>
-                  <li className="flex items-center p-2 hover:bg-[#e9e9e9] rounded">
+                  <li className="flex items-center p-2 hover:bg-[#e9e9e9] rounded" onClick={() => setCurrentSection("news")}>
                     <span className="text-[#919191] mr-2">📰</span>
                     <span className="text-[#2a2a2a]">{t.news}</span>
                   </li>
-                  <li className="flex items-center p-2 hover:bg-[#e9e9e9] rounded">
+                  <li className="flex items-center p-2 hover:bg-[#e9e9e9] rounded" onClick={() => setCurrentSection("social")}>
                     <span className="text-[#919191] mr-2">💬</span>
                     <span className="text-[#2a2a2a]">{t.social}</span>
                   </li>
-                  <li className="flex items-center p-2 hover:bg-[#e9e9e9] rounded">
+                  <li className="flex items-center p-2 hover:bg-[#e9e9e9] rounded" onClick={() => setCurrentSection("oneXten")}>
+                    <span className="text-[#919191] mr-2">🤝</span>
+                    <span className="text-[#2a2a2a]">{t.oneXten}</span>
+                  </li>
+                  <li className="flex items-center p-2 hover:bg-[#e9e9e9] rounded" onClick={() => setCurrentSection("profile")}>
                     <span className="text-[#919191] mr-2">👤</span>
                     <span className="text-[#2a2a2a]">{t.profile}</span>
                   </li>
@@ -145,62 +209,135 @@
 
               {/* Central Feed */}
               <main className="w-2/4 space-y-4">
-                {/* Tarjeta de Protección Social */}
-                <div className="bg-[#FFD700] p-4 rounded shadow-[#e2e2e2]">
-                  <h2 className="text-[#2a2a2a] font-bold">Tarjeta de Protección Social</h2>
-                  <p>Accede a beneficios personalizados según tu perfil.</p>
-                </div>
-
-                {/* News Feed */}
-                {news.length > 0 ? (
-                  news.map((item) => (
-                    <div
-                      key={item.id || `news-${Math.random()}`}
-                      className="bg-[#ffffff] p-4 rounded shadow-[#e2e2e2]"
-                    >
-                      <img
-                        src={item.image || "https://via.placeholder.com/300"}
-                        alt="News"
-                        className="w-full h-40 object-cover rounded"
-                        onError={(e) => (e.target.src = "https://via.placeholder.com/300")}
-                      />
-                      <h3 className="text-[#2a2a2a] font-bold">{item.title || "Sin título"}</h3>
-                      <p className="text-[#2a2a2a]">{item.summary || "Sin resumen"}</p>
-                      <span className="text-[#b31611]">{item.category || "General"}</span>
+                {currentSection === "home" && (
+                  <>
+                    {/* Tarjeta de Protección Social */}
+                    <div className="bg-[#FFD700] p-4 rounded shadow-[#e2e2e2]">
+                      <h2 className="text-[#2a2a2a] font-bold">Tarjeta de Protección Social</h2>
+                      <p>Accede a beneficios personalizados según tu perfil.</p>
                     </div>
-                  ))
-                ) : (
-                  <p className="text-[#2a2a2a]">Cargando noticias...</p>
+
+                    {/* News Feed */}
+                    {news.length > 0 ? (
+                      news.map((item) => (
+                        <div
+                          key={item.id || `news-${Math.random()}`}
+                          className="bg-[#ffffff] p-4 rounded shadow-[#e2e2e2]"
+                        >
+                          <img
+                            src={item.image || "https://via.placeholder.com/300"}
+                            alt="News"
+                            className="w-full h-40 object-cover rounded"
+                            onError={(e) => (e.target.src = "https://via.placeholder.com/300")}
+                          />
+                          <h3 className="text-[#2a2a2a] font-bold">{item.title || "Sin título"}</h3>
+                          <p className="text-[#2a2a2a]">{item.summary || "Sin resumen"}</p>
+                          <span className="text-[#b31611]">{item.category || "General"}</span>
+                        </div>
+                      ))
+                    ) : (
+                      <p className="text-[#2a2a2a]">Cargando noticias...</p>
+                    )}
+
+                    {/* Social Posts */}
+                    {posts.length > 0 ? (
+                      posts.map((post) => (
+                        <div
+                          key={post.id || `post-${Math.random()}`}
+                          className="bg-[#ffffff] p-4 rounded shadow-[#e2e2e2]"
+                        >
+                          <div className="flex items-center">
+                            <img
+                              src={post.userAvatar || "https://via.placeholder.com/40"}
+                              alt="User"
+                              className="w-10 h-10 rounded-full"
+                              onError={(e) => (e.target.src = "https://via.placeholder.com/40")}
+                            />
+                            <div className="ml-2">
+                              <p className="text-[#2a2a2a] font-bold">{post.userName || "Anónimo"}</p>
+                              <p className="text-[#bcbcbc] text-sm">{post.time || "Desconocido"}</p>
+                            </div>
+                          </div>
+                          <p className="mt-2 text-[#2a2a2a]">{post.content || "Sin contenido"}</p>
+                          <div className="flex space-x-4 mt-2">
+                            <button className="text-[#919191]">Like</button>
+                            <button className="text-[#919191]">Comentar</button>
+                          </div>
+                        </div>
+                      ))
+                    ) : (
+                      <p className="text-[#2a2a2a]">Cargando publicaciones...</p>
+                    )}
+                  </>
                 )}
 
-                {/* Social Posts */}
-                {posts.length > 0 ? (
-                  posts.map((post) => (
-                    <div
-                      key={post.id || `post-${Math.random()}`}
-                      className="bg-[#ffffff] p-4 rounded shadow-[#e2e2e2]"
-                    >
-                      <div className="flex items-center">
-                        <img
-                          src={post.userAvatar || "https://via.placeholder.com/40"}
-                          alt="User"
-                          className="w-10 h-10 rounded-full"
-                          onError={(e) => (e.target.src = "https://via.placeholder.com/40")}
-                        />
-                        <div className="ml-2">
-                          <p className="text-[#2a2a2a] font-bold">{post.userName || "Anónimo"}</p>
-                          <p className="text-[#bcbcbc] text-sm">{post.time || "Desconocido"}</p>
+                {currentSection === "news" && (
+                  <>
+                    {/* News Feed Only */}
+                    {news.length > 0 ? (
+                      news.map((item) => (
+                        <div
+                          key={item.id || `news-${Math.random()}`}
+                          className="bg-[#ffffff] p-4 rounded shadow-[#e2e2e2]"
+                        >
+                          <img
+                            src={item.image || "https://via.placeholder.com/300"}
+                            alt="News"
+                            className="w-full h-40 object-cover rounded"
+                            onError={(e) => (e.target.src = "https://via.placeholder.com/300")}
+                          />
+                          <h3 className="text-[#2a2a2a] font-bold">{item.title || "Sin título"}</h3>
+                          <p className="text-[#2a2a2a]">{item.summary || "Sin resumen"}</p>
+                          <span className="text-[#b31611]">{item.category || "General"}</span>
                         </div>
-                      </div>
-                      <p className="mt-2 text-[#2a2a2a]">{post.content || "Sin contenido"}</p>
-                      <div className="flex space-x-4 mt-2">
-                        <button className="text-[#919191]">Like</button>
-                        <button className="text-[#919191]">Comentar</button>
-                      </div>
-                    </div>
-                  ))
-                ) : (
-                  <p className="text-[#2a2a2a]">Cargando publicaciones...</p>
+                      ))
+                    ) : (
+                      <p className="text-[#2a2a2a]">Cargando noticias...</p>
+                    )}
+                  </>
+                )}
+
+                {currentSection === "social" && (
+                  <>
+                    {/* Social Posts Only */}
+                    {posts.length > 0 ? (
+                      posts.map((post) => (
+                        <div
+                          key={post.id || `post-${Math.random()}`}
+                          className="bg-[#ffffff] p-4 rounded shadow-[#e2e2e2]"
+                        >
+                          <div className="flex items-center">
+                            <img
+                              src={post.userAvatar || "https://via.placeholder.com/40"}
+                              alt="User"
+                              className="w-10 h-10 rounded-full"
+                              onError={(e) => (e.target.src = "https://via.placeholder.com/40")}
+                            />
+                            <div className="ml-2">
+                              <p className="text-[#2a2a2a] font-bold">{post.userName || "Anónimo"}</p>
+                              <p className="text-[#bcbcbc] text-sm">{post.time || "Desconocido"}</p>
+                            </div>
+                          </div>
+                          <p className="mt-2 text-[#2a2a2a]">{post.content || "Sin contenido"}</p>
+                          <div className="flex space-x-4 mt-2">
+                            <button className="text-[#919191]">Like</button>
+                            <button className="text-[#919191]">Comentar</button>
+                          </div>
+                        </div>
+                      ))
+                    ) : (
+                      <p className="text-[#2a2a2a]">Cargando publicaciones...</p>
+                    )}
+                  </>
+                )}
+
+                {currentSection === "oneXten" && <OneXTen t={t} />}
+
+                {currentSection === "profile" && (
+                  <div className="bg-[#ffffff] p-4 rounded shadow-[#e2e2e2]">
+                    <h2 className="text-[#2a2a2a] font-bold text-xl">{t.profile}</h2>
+                    <p className="text-[#2a2a2a]">Aquí irá el perfil del usuario...</p>
+                  </div>
                 )}
               </main>
 
